# sample-mcp-server-template

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: pdd.agent.md
.github/prompts/: auto-commit.prompt.md
.github/workflows/: ci.yml
.pdd/: AGENTS.md
docs/adr/: 0001-record-architecture-decisions.md  0002-use-fastmcp-framework.md
src/sample_mcp/: __init__.py  prompts.py  resources.py  server.py  tools.py
tests/: __init__.py  test_server.py
