[project]
name = "sample-mcp"
version = "0.1.0"
description = "Sample MCP server built with FastMCP"
authors = [{ name = "Your Name" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.13.3,<3.0.0",
]

[project.scripts]
sample-mcp = "sample_mcp.server:main"

[project.urls]
Homepage = "https://github.com/your-username/sample-mcp"
Repository = "https://github.com/your-username/sample-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sample_mcp"]

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "pytest-github-actions-annotate-failures>=0.2.0",
    "ruff>=0.14.0",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/sample_mcp"]
